added unittests for all strategies